--- a/Homework 0.3/Homework 0.3.ipynb
+++ b/Homework 0.3/Homework 0.3.ipynb
@@ -2,14 +2,416 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import "
+    "import numpy as np\n",
+    "import scipy.stats as stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>height_inches</th>\n",
+       "      <th>weight_pounds</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>65.78331</td>\n",
+       "      <td>112.9925</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>71.51521</td>\n",
+       "      <td>136.4873</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>69.39874</td>\n",
+       "      <td>153.0269</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>68.21660</td>\n",
+       "      <td>142.3354</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>67.78781</td>\n",
+       "      <td>144.2971</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   index  height_inches  weight_pounds\n",
+       "0      1       65.78331       112.9925\n",
+       "1      2       71.51521       136.4873\n",
+       "2      3       69.39874       153.0269\n",
+       "3      4       68.21660       142.3354\n",
+       "4      5       67.78781       144.2971"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = pd.read_csv( 'hw_25000.csv', names = ['index', 'height_inches', 'weight_pounds'], header = 1, sep=';' )\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>height_inches</th>\n",
+       "      <th>weight_pounds</th>\n",
+       "      <th>height_sm</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>65.78331</td>\n",
+       "      <td>112.9925</td>\n",
+       "      <td>167.089607</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>71.51521</td>\n",
+       "      <td>136.4873</td>\n",
+       "      <td>181.648633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>69.39874</td>\n",
+       "      <td>153.0269</td>\n",
+       "      <td>176.272800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>68.21660</td>\n",
+       "      <td>142.3354</td>\n",
+       "      <td>173.270164</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>67.78781</td>\n",
+       "      <td>144.2971</td>\n",
+       "      <td>172.181037</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   index  height_inches  weight_pounds   height_sm\n",
+       "0      1       65.78331       112.9925  167.089607\n",
+       "1      2       71.51521       136.4873  181.648633\n",
+       "2      3       69.39874       153.0269  176.272800\n",
+       "3      4       68.21660       142.3354  173.270164\n",
+       "4      5       67.78781       144.2971  172.181037"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['height_sm'] = data['height_inches'] * 2.54\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(20, 4)"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_sample = data[(data['height_sm'] >= 170) & (data['height_sm'] <= 180)]\n",
+    "data_sample_20 = data_sample[:20]\n",
+    "data_sample_20.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>height_inches</th>\n",
+       "      <th>weight_pounds</th>\n",
+       "      <th>height_sm</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>69.39874</td>\n",
+       "      <td>153.0269</td>\n",
+       "      <td>176.272800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>68.21660</td>\n",
+       "      <td>142.3354</td>\n",
+       "      <td>173.270164</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>67.78781</td>\n",
+       "      <td>144.2971</td>\n",
+       "      <td>172.181037</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>68.69784</td>\n",
+       "      <td>123.3024</td>\n",
+       "      <td>174.492514</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>69.80204</td>\n",
+       "      <td>141.4947</td>\n",
+       "      <td>177.297182</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>70.01472</td>\n",
+       "      <td>136.4623</td>\n",
+       "      <td>177.837389</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9</td>\n",
+       "      <td>67.90265</td>\n",
+       "      <td>112.3723</td>\n",
+       "      <td>172.472731</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>12</td>\n",
+       "      <td>67.62333</td>\n",
+       "      <td>114.1430</td>\n",
+       "      <td>171.763258</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>13</td>\n",
+       "      <td>68.30248</td>\n",
+       "      <td>125.6107</td>\n",
+       "      <td>173.488299</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>14</td>\n",
+       "      <td>67.11656</td>\n",
+       "      <td>122.4618</td>\n",
+       "      <td>170.476062</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    index  height_inches  weight_pounds   height_sm\n",
+       "2       3       69.39874       153.0269  176.272800\n",
+       "3       4       68.21660       142.3354  173.270164\n",
+       "4       5       67.78781       144.2971  172.181037\n",
+       "5       6       68.69784       123.3024  174.492514\n",
+       "6       7       69.80204       141.4947  177.297182\n",
+       "7       8       70.01472       136.4623  177.837389\n",
+       "8       9       67.90265       112.3723  172.472731\n",
+       "11     12       67.62333       114.1430  171.763258\n",
+       "12     13       68.30248       125.6107  173.488299\n",
+       "13     14       67.11656       122.4618  170.476062"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_sample_20.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "132.92411"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean_20 = data_sample_20['weight_pounds'].mean()\n",
+    "mean_20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "127.07942116079916"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean_weight_all = data['weight_pounds'].mean()\n",
+    "mean_all"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_1sampResult(statistic=2.2438433326713279, pvalue=0.036952752151255777)"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.ttest_1samp( data_sample_20['weight_pounds'], mean_weight_all)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "## pvalue < 0.05 => разница среднего веса людей в исходном файле и среднего веса людей во всем наборе данных №2 статистически значима"
    ]
   }
  ],
