--- a/Homework 2.1/Homework 2.1.ipynb
+++ b/Homework 2.1/Homework 2.1.ipynb
@@ -788,7 +788,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Заполненяем пустые значения"
+    "# Заполняем пустые значения"
    ]
   },
   {
@@ -996,7 +996,9 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "Y_test_prediction = clf.predict(X_test_imputed)\n",
@@ -1060,7 +1062,9 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from IPython.display import Image\n",
